--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ DEBUG_OBJS=debug_kernel.o
 KERNEL_CCFLAGS=-Wall -c -ffreestanding -m32 -march=i386
 KERNEL_LDFLAGS=-m elf_i386
 
-all: basekernel.iso
+all: basekernel.iso test_iso.iso
 
 debug: KERNEL_CCFLAGS += -DNUNYA_KDEBUG
 debug: basekernel.iso
@@ -29,6 +29,12 @@ bootblock: bootblock.o
 kernel: ${OBJECTS}
 	ld ${KERNEL_LDFLAGS} -Ttext 0x10000 -s --oformat binary ${OBJECTS} -o $@
 
+test_iso.iso: userproc
+	mkdir ./test_iso && mv ./userproc ./test_iso/userproc && genisoimage -o ../test_iso.iso ./test_iso/ && rm -r ./test_iso
+
+userproc: test_userproc.o syscall.o
+	ld ${KERNEL_LDFLAGS} -Ttext 0x80000000 -s --oformat binary test_userproc.o syscall.o -o $@
+
 %.o: %.c
 	gcc ${KERNEL_CCFLAGS} $< -o $@
 
@@ -39,4 +45,4 @@ kernel: ${OBJECTS}
 	gcc -Wall -S -ffreestanding -m32 -march=i386 $< -o $@
 
 clean:
-	rm -rf basekernel.iso basekernel.img bootblock kernel *.o
+	rm -rf basekernel.iso basekernel.img bootblock userproc kernel ./test_iso *.o
